Reduce 3rd party dependencies